--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require-dev": {
-    "phpunit/phpunit": "4.8.*"
+    "phpunit/phpunit": "4.8.*",
+    "zendframework/zend-coding-standard": "1.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -21,7 +22,13 @@
     }
   },
   "scripts": {
+    "check": [
+      "@cs-check",
+      "@test"
+    ],
     "test": "phpunit --colors=always",
-    "test-coverage": "phpunit --colors=always --coverage-clover build/clover.xml"
+    "test-coverage": "phpunit --colors=always --coverage-clover build/clover.xml",
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf"
   }
 }
