--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "opus4", "doi"
   ],
   "homepage": "http://www.opus-repository.org",
+  "require": {
+    "zendframework/zendframework1": "1.12.*"
+  },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
     "zendframework/zend-coding-standard": "1.0.0"
+
   },
   "autoload": {
     "psr-4": {
