--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
-{
-  "language": "php",
-  "before_install": [
-    "if php -r \"exit( (int)! version_compare( '$TRAVIS_PHP_VERSION', '5.6', '>=' ) );\"; then wget -O phpunit https://phar.phpunit.de/phpunit-5.7.phar && chmod +x phpunit && mkdir ~/bin && mv -v phpunit ~/bin; fi"
-  ],
-  "php": "5.6",
-  "before_script": [
-    "composer install"
-  ],
-  "script": "phpunit --configuration phpunit.xml",
-  "group": "stable",
-  "dist": "trusty",
-  "os": "linux"
-}
+language: php
+php:
+  - '5.6'
+  - '7.1'
+before_script: composer install
